2002-04-30  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* plugins/simple/simple.c: included patch from
	Arnaud Guignard <arnaud.guignard@free.fr> to handle 
	IDMEF source node address.

2002-04-29  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* plugins/simple/ruleset/netfilter.rules:
	MAC content can be empty.

2002-04-28  Laurent Oudot <oudot.laurent@wanadoo.fr>

	* plugin/simple/ruleset/netfilter.rules: new file. Rules for netfilter 
	firewall on Linux 2.4.x boxes.

	* plugins/simple/ruleset/Makefile.am: added netfilter.rules

	* plugins/simple/ruleset/zyxel.rules and cisco.rules: added comments. 

2002-04-27  Krzysztof Zaraska  <kzaraska@student.uci.agh.edu.pl>

	* plugins/simple/ruleset/ipfw.rules: fixes, cleanup, ICMP support. 

	* plugins/simple/ruleset/Makefile.am: added ifpw.rules

2002-04-27  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* configure.in: use AM_PROG_LIBTOOL, for older 
        libtool/automake installation.

	* src/file-server.c (read_logfile): 
	return the number of byte read.
	
	(file_server_wake_up): if we get EOF, without reading all
	the new available byte, remeber how many byte are left to 
	be read, and retry even thought st_size isn't modified.

	* src/log-plugins.c (subscribe): 
	(unsubscribe): be more verbose - not only debug.

	* src/file-server.c (file_server_monitor_file): 
	(file_server_wake_up): use st_size, not st_mtime.

	also include libprelude/timer.h

2002-04-27  Krzysztof Zaraska  <kzaraska@student.uci.agh.edu.pl>

	* file-server.c: (read_logfile): 
	use clearerr_unlocked() after hitting EOF on observed file. 
	Fixes problem on FreeBSD. 

2002-04-27  Krzysztof Zaraska  <kzaraska@student.uci.agh.edu.pl>
	
	* plugins/simple/ruleset/ipfw.rules: new file. Rules for ipfw
	firewall on FreeBSD.

	* plugins/simple/ruleset/simple.rules: include ipfw.rules

2002-04-27  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/log-plugins.c (subscribe): 
	(unsubscribe): be more verbose about subscribed plugins.
