@@ -1,3 +1,10 @@
+2002-05-05  Yoann Vandoorselaere  <yoann@mandrakesoft.com>
+
+	* src/include/Makefile.am (include_HEADERS): 
+	install needed include file.
+
+	* Makefile.am (preludeconfdir): fix make distcheck.
+
 2002-04-30  Yoann Vandoorselaere  <yoann@mandrakesoft.com>
 
 	* plugins/simple/simple.c: included patch from
